@startuml
'https://plantuml.com/class-diagram
package pumlFromjava{
class FirstDoclet implements Doclet
class Java2Puml
class OptionD implements Doclet.Option
class OptionOut implements Doclet.Option
class PumlDiagram
class PumlDoclet implements Doclet

PumlDoclet -- OptionD: > use
PumlDoclet -- PumlDiagram:> use
PumlDoclet -- OptionOut : > use
Java2Puml -- PumlDoclet : > Prend en argument
Java2Puml - OptionOut : > Prend en option
Java2Puml - OptionD : > Prend en option
}
@enduml